--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             Bonnes réponses à la suite : <span id="score">0</span>
        </div>
        <a href="https://fr.wikipedia.org/wiki/Rouge_vert_bleu" target="_blank"
-        >Besoin d'aide ? Rappels sur le RGB</a
+        >C'est trop dur? Rappels sur le RGB</a
       >
     </div>
     <script src="./app.js"></script>
